// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextEditor > should render correctly with sample html content 1`] = `
<div>
  <div
    class="ring-text-editor MuiBox-root css-188ct9b"
  >
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiBox-root css-1d9wf2y"
      >
        <div
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-bold"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatBoldOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H7v14h7.04c2.09 0 3.71-1.7 3.71-3.79 0-1.52-.86-2.82-2.15-3.42M10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5"
              />
            </svg>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-middleButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-italic"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatItalicOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4v3h2.21l-3.42 8H6v3h8v-3h-2.21l3.42-8H18V4z"
              />
            </svg>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-middleButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-bullet-list"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatListBulletedOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5m0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5m0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5M7 19h14v-2H7zm0-6h14v-2H7zm0-8v2h14V5z"
              />
            </svg>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-numbered-list"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatListNumberedOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2zm1-9h1V4H2v1h1zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2zm5-6v2h14V5zm0 14h14v-2H7zm0-6h14v-2H7z"
              />
            </svg>
          </button>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
      />
    </div>
    <div>
      <div
        class="tiptap ProseMirror"
        contenteditable="true"
        role="textbox"
        tabindex="0"
        translate="no"
      >
        <p>
          Lorem ipsum 
          <em>
            dolor sit
          </em>
           
          <strong>
            amet
          </strong>
          , consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
        </p>
        <p>
          Link: 
          <a
            href="https://en.wikipedia.org/wiki/Lorem_ipsum"
            rel="noopener noreferrer"
            target="_blank"
            title="Lorem ipsum"
          >
            Lorem ipsum
          </a>
        </p>
        <div
          class="react-renderer node-image"
          draggable="true"
        >
          <div
            data-node-view-wrapper=""
            data-testid="ring-image-node"
            style="white-space: normal;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-en36hu-MuiPaper-root-MuiCard-root"
              data-testid="ring-media"
              style="--Paper-shadow: none;"
            >
              <figure
                class="MuiBox-root css-14hubqc"
              >
                <div
                  class="MuiBox-root css-79elbk"
                >
                  <div
                    class="css-s3xtrq"
                  >
                    <div
                      class="css-l9y6au"
                    >
                      <img
                        class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-19cjceo-MuiCardMedia-root"
                        data-first-child=""
                        draggable="false"
                        src="https://ocdn.eu/pulscms-transforms/1/vKzktkuTURBXy9lMTY1ZTU0Zi00YTg4LTRmNWQtYWYwZi0xOTUzM2U4MmY4Y2YuanBlZ5GVAs0CigDDww"
                        title="Image title"
                      />
                    </div>
                  </div>
                </div>
                <figcaption>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-9a9pmt-MuiTypography-root"
                  >
                    Image title
                  </p>
                </figcaption>
              </figure>
            </div>
            <div
              class="MuiBox-root css-12efcmn"
            />
          </div>
        </div>
        <ol>
          <li>
            <p>
              First item
            </p>
          </li>
          <li>
            <p>
              Second item
            </p>
          </li>
        </ol>
        <ul>
          <li>
            <p>
              First item
            </p>
          </li>
          <li>
            <p>
              Second item
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextEditor > should render correctly with sample json content 1`] = `
<div>
  <div
    class="ring-text-editor MuiBox-root css-188ct9b"
  >
    <div
      class="MuiBox-root css-0"
    >
      <div
        class="MuiBox-root css-1d9wf2y"
      >
        <div
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-1qb8o-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-bold"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatBoldOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.6 10.79c.97-.67 1.65-1.77 1.65-2.79 0-2.26-1.75-4-4-4H7v14h7.04c2.09 0 3.71-1.7 3.71-3.79 0-1.52-.86-2.82-2.15-3.42M10 6.5h3c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5h-3zm3.5 9H10v-3h3.5c.83 0 1.5.67 1.5 1.5s-.67 1.5-1.5 1.5"
              />
            </svg>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-middleButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-italic"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatItalicOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 4v3h2.21l-3.42 8H6v3h8v-3h-2.21l3.42-8H18V4z"
              />
            </svg>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-middleButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-bullet-list"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatListBulletedOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4 10.5c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5 1.5-.67 1.5-1.5-.67-1.5-1.5-1.5m0-6c-.83 0-1.5.67-1.5 1.5S3.17 7.5 4 7.5 5.5 6.83 5.5 6 4.83 4.5 4 4.5m0 12c-.83 0-1.5.68-1.5 1.5s.68 1.5 1.5 1.5 1.5-.68 1.5-1.5-.67-1.5-1.5-1.5M7 19h14v-2H7zm0-6h14v-2H7zm0-8v2h14V5z"
              />
            </svg>
          </button>
          <button
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-1gz5iy8-MuiButtonBase-root-MuiToggleButton-root"
            data-testid="ring-texteditor-menu-numbered-list"
            tabindex="0"
            type="button"
            value="false"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
              data-testid="FormatListNumberedOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 17h2v.5H3v1h1v.5H2v1h3v-4H2zm1-9h1V4H2v1h1zm-1 3h1.8L2 13.1v.9h3v-1H3.2L5 10.9V10H2zm5-6v2h14V5zm0 14h14v-2H7zm0-6h14v-2H7z"
              />
            </svg>
          </button>
        </div>
      </div>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
      />
    </div>
    <div>
      <div
        class="tiptap ProseMirror"
        contenteditable="true"
        role="textbox"
        tabindex="0"
        translate="no"
      >
        <p>
          Lorem ipsum 
          <em>
            dolor sit
          </em>
           
          <strong>
            amet
          </strong>
          , consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
        <p>
          Link: 
          <a
            href="https://en.wikipedia.org/wiki/Lorem_ipsum"
            rel="noopener noreferrer"
            target="_blank"
            title="Lorem ipsum"
          >
            Lorem ipsum
          </a>
        </p>
        <div
          class="react-renderer node-image"
          draggable="true"
        >
          <div
            data-node-view-wrapper=""
            data-testid="ring-image-node"
            style="white-space: normal;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-en36hu-MuiPaper-root-MuiCard-root"
              data-testid="ring-media"
              style="--Paper-shadow: none;"
            >
              <figure
                class="MuiBox-root css-14hubqc"
              >
                <div
                  class="MuiBox-root css-79elbk"
                >
                  <div
                    class="css-s3xtrq"
                  >
                    <div
                      class="css-l9y6au"
                    >
                      <img
                        class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img css-19cjceo-MuiCardMedia-root"
                        data-first-child=""
                        draggable="false"
                        src="https://ocdn.eu/pulscms-transforms/1/vKzktkuTURBXy9lMTY1ZTU0Zi00YTg4LTRmNWQtYWYwZi0xOTUzM2U4MmY4Y2YuanBlZ5GVAs0CigDDww"
                        title="Image title"
                      />
                    </div>
                  </div>
                </div>
                <figcaption>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-9a9pmt-MuiTypography-root"
                  >
                    Image title
                  </p>
                </figcaption>
              </figure>
            </div>
            <div
              class="MuiBox-root css-12efcmn"
            />
          </div>
        </div>
        <ol>
          <li>
            <p>
              First item
            </p>
          </li>
          <li>
            <p>
              Second item
            </p>
          </li>
        </ol>
        <ul>
          <li>
            <p>
              First item
            </p>
          </li>
          <li>
            <p>
              Second item
            </p>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
